adjusted terminal export

--- a/docs/src/pages/index.astro
+++ b/docs/src/pages/index.astro
@@ -960,7 +960,7 @@ import '../styles/custom.css';
         <div class="story-slide-inner">
           <div class="story-visual">
             <div class="story-visual-container code-visual">
-              <img src="/astonish/images/terminal-run.png" onerror="this.src='/astonish/images/flow-visual.png'" alt="Terminal execution of Astonish flow" />
+              <img src="/astonish/images/terminal_execution.gif" onerror="this.src='/astonish/images/flow-visual.png'" alt="Terminal execution of Astonish flow" />
             </div>
           </div>
           <div class="story-text">
